update build commands

--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "react-redux-es6-starter",
-  "version": "1.0.1",
-  "description": "React Redux ES6 Tutorial from Cory House turtorial on Pluralsight.",
+  "name": "ps-redux",
+  "version": "1.0.0",
+  "description": "Starter kit for React and Redux Pluralsight course by Cory House",
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
     "start": "npm-run-all --parallel test:watch open:src lint:watch",
     "open:src": "babel-node tools/srcServer.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --reporter spec tools/testSetup.js \"src/**/*.test.js\"",
-    "test:watch": "npm run test -- --watch"
+    "test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
+    "test:watch": "npm run test -- --watch",
+    "clean-dist": "npm run remove-dist && mkdir dist",
+    "remove-dist": "node_modules/.bin/rimraf ./dist",
+    "build:html": "babel-node tools/buildHtml.js",
+    "prebuild": "npm-run-all clean-dist test lint build:html",
+    "build": "babel-node tools/build.js",
+    "postbuild": "babel-node tools/distServer.js"
   },
-  "author": "Matthew French",
+  "author": "Cory House",
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
     "jquery": "2.2.3",
-    "psi": "^2.0.4",
     "react": "15.0.2",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
@@ -36,8 +41,9 @@
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
     "babel-register": "6.8.0",
+    "cheerio": "^0.20.0",
     "colors": "1.1.2",
-    "compression": "1.6.1",
+    "compression": "^1.6.1",
     "cross-env": "1.0.7",
     "css-loader": "0.23.1",
     "enzyme": "2.2.0",
@@ -67,6 +73,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/matthew-french/react-redux-es6-starter"
+    "url": "https://github.com/coryhouse/pluralsight-redux-starter"
   }
 }
