--- a/package.json
+++ b/package.json
@@ -73,6 +73,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/coryhouse/pluralsight-redux-starter"
+    "url": "https://github.com/matthew-french/react-redux-es6-starter.git"
   }
 }
