--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "node_modules/.bin/rimraf ./dist",
     "build:html": "babel-node tools/buildHtml.js",
-    "prebuild": "npm-run-all clean-dist test lint build:html",
     "build": "babel-node tools/build.js",
     "postbuild": "babel-node tools/distServer.js"
   },
   "author": "Cory House",
   "license": "MIT",
+  "engines": {
+    "node": "6.1.0"
+  },
   "dependencies": {
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
