--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "react-router-redux": "4.0.4",
     "redux": "3.5.2",
     "redux-thunk": "2.0.1",
-    "toastr": "2.1.2"
-  },
-  "devDependencies": {
+    "toastr": "2.1.2",
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
     "babel-loader": "6.2.4",
@@ -42,7 +40,9 @@
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
-    "babel-register": "6.8.0",
+    "babel-register": "6.8.0"
+  },
+  "devDependencies": {
     "cheerio": "^0.20.0",
     "colors": "1.1.2",
     "compression": "^1.6.1",
