--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "node_modules/.bin/rimraf ./dist",
     "build:html": "babel-node tools/buildHtml.js",
-    "build": "babel-node tools/build.js",
-    "postbuild": "babel-node tools/distServer.js"
+    "build": "./node_modules/.bin/babel-node tools/build.js",
+    "postbuild": "./node_modules/.bin/babel-node tools/distServer.js"
   },
   "author": "Cory House",
   "license": "MIT",
