--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
-    "babel-register": "6.8.0"
-  },
-  "devDependencies": {
+    "babel-register": "6.8.0",
     "cheerio": "^0.20.0",
     "colors": "1.1.2",
     "compression": "^1.6.1",
