--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "description": "Starter kit for React and Redux Pluralsight course by Cory House",
   "scripts": {
-    "prestart": "babel-node tools/startMessage.js",
+    "prestart": "./node_modules/.bin/babel-node tools/startMessage.js",
     "start": "npm-run-all --parallel test:watch open:src lint:watch",
-    "open:src": "babel-node tools/srcServer.js",
+    "open:src": "./node_modules/.bin/babel-node tools/srcServer.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "node_modules/.bin/rimraf ./dist",
-    "build:html": "babel-node tools/buildHtml.js",
+    "build:html": "./node_modules/.bin/babel-node tools/buildHtml.js",
+    "prebuild": "npm-run-all clean-dist test lint build:html",
     "build": "./node_modules/.bin/babel-node tools/build.js",
     "postbuild": "./node_modules/.bin/babel-node tools/distServer.js"
   },
