--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "node_modules/.bin/rimraf ./dist",
     "build:html": "./node_modules/.bin/babel-node tools/buildHtml.js",
-    "prebuild": "npm-run-all clean-dist build:html",
+    "prebuild": "./node_modules/.bin/babel-node npm-run-all clean-dist build:html",
     "build": "./node_modules/.bin/babel-node tools/build.js",
     "postbuild": "./node_modules/.bin/babel-node tools/distServer.js"
   },
