--- a/package.json
+++ b/package.json
@@ -3,37 +3,47 @@
   "version": "1.0.0",
   "description": "Starter kit for React and Redux Pluralsight course by Cory House",
   "scripts": {
-    "prestart": "./node_modules/.bin/babel-node tools/startMessage.js",
+    "prestart": "babel-node tools/startMessage.js",
     "start": "npm-run-all --parallel test:watch open:src lint:watch",
-    "open:src": "./node_modules/.bin/babel-node tools/srcServer.js",
+    "open:src": "babel-node tools/srcServer.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "node_modules/.bin/rimraf ./dist",
-    "build:html": "./node_modules/.bin/babel-node tools/buildHtml.js",
-    "prebuild": "npm-run-all clean-dist build:html",
-    "build": "./node_modules/.bin/babel-node tools/build.js",
-    "postbuild": "nodemon tools/distServer.js --exec babel-node --presets es2015,stage-2"
+    "build:html": "babel-node tools/buildHtml.js",
+    "prebuild": "npm-run-all clean-dist test lint build:html",
+    "build": "babel-node tools/build.js",
+    "postbuild": "babel-node tools/distServer.js"
   },
   "author": "Cory House",
   "license": "MIT",
   "engines": {
-    "node": "6.1.0",
-    "npm": "3.9.5"
+    "node": "6.1.0"
   },
   "dependencies": {
+    "babel-polyfill": "6.8.0",
+    "bootstrap": "3.3.6",
+    "jquery": "2.2.3",
+    "react": "15.0.2",
+    "react-dom": "15.0.2",
+    "react-redux": "4.4.5",
+    "react-router": "2.4.0",
+    "react-router-redux": "4.0.4",
+    "redux": "3.5.2",
+    "redux-thunk": "2.0.1",
+    "toastr": "2.1.2"
+  },
+  "devDependencies": {
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
     "babel-loader": "6.2.4",
     "babel-plugin-react-display-name": "2.0.0",
-    "babel-polyfill": "6.8.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
     "babel-register": "6.8.0",
-    "bootstrap": "3.3.6",
     "cheerio": "^0.20.0",
     "colors": "1.1.2",
     "compression": "^1.6.1",
@@ -49,31 +59,20 @@
     "express": "4.13.4",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
-    "jquery": "2.2.3",
     "jsdom": "8.5.0",
     "mocha": "2.4.5",
     "nock": "8.0.0",
-    "nodemon": "^1.10.0",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
-    "react": "15.0.2",
     "react-addons-test-utils": "15.0.2",
-    "react-dom": "15.0.2",
-    "react-redux": "4.4.5",
-    "react-router": "2.4.0",
-    "react-router-redux": "4.0.4",
-    "redux": "3.5.2",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
-    "redux-thunk": "2.0.1",
     "rimraf": "2.5.2",
     "style-loader": "0.13.1",
-    "toastr": "2.1.2",
     "url-loader": "0.5.7",
     "webpack": "1.13.0",
     "webpack-dev-middleware": "1.6.1",
-    "webpack-hot-middleware": "2.10.0",
-    "babel-preset-stage-2": "^6.11.0"
+    "webpack-hot-middleware": "2.10.0"
   },
   "repository": {
     "type": "git",
